--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,8 @@
+html,
+body {
+  height: 100%;
+}
+
 header {
   display: flex;
   justify-content: flex-end;
@@ -13,4 +18,11 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+#__next {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  height: 100%;
 }
